feat: add AppFactory for bootstrapping and Configuration class
- Add AppFactory class to bootstrap Azure Functions apps with dependency injection
- Add Configuration class for environment variable management with case-insensitive lookup
- Fix controller discovery to properly handle package imports and paths
- Export all public APIs in __init__.py for better developer experience
- Add project description to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "azfunc-boot"
 version = "0.1.0"
-description = ""
+description = "A powerful framework for building Azure Functions applications with built-in dependency injection and hexagonal architecture support"
 authors = ["santiago <santivasquez1@gmail.com>"]
 readme = "README.md"
 packages = [{include = "azfunc_boot", from = "src"}]
