--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,23 @@
 [tool.poetry]
 name = "azfunc-boot"
 version = "0.1.0"
-description = "A powerful framework for building Azure Functions applications with built-in dependency injection and hexagonal architecture support"
-authors = ["santiago <santivasquez1@gmail.com>"]
+description = "A powerful framework for building Azure Functions applications with built-in dependency injection and controller-based architecture"
+authors = ["Santiago Vasquez Gomez <santivasquez1@gmail.com>"]
 readme = "README.md"
-packages = [{include = "azfunc_boot", from = "src"}]
+license = "MIT"
+homepage = "https://github.com/santiagovasquez1/azfunc-boot"
+repository = "https://github.com/santiagovasquez1/azfunc-boot"
+keywords = ["azure", "functions", "dependency-injection", "framework", "mvc"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
+]
 
 [tool.poetry.dependencies]
 python = "^3.11"
