--- a/.github/workflows/publish-testpypi.yml
+++ b/.github/workflows/publish-testpypi.yml
@@ -45,8 +45,40 @@ jobs:
       - name: Install project
         run: poetry install --no-interaction
 
-      - name: Run tests
-        run: poetry run pytest tests/ -v --cov=src/azfunc_boot --cov-report=xml --cov-report=term
+      - name: Run tests with coverage
+        run: |
+          poetry run pytest tests/ \
+            -v \
+            --cov=src/azfunc_boot \
+            --cov-report=xml \
+            --cov-report=html \
+            --cov-report=term-missing \
+            --cov-report=term:skip-covered \
+            --junit-xml=junit-test-results.xml
+
+      - name: Upload coverage reports
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: coverage-reports
+          path: |
+            coverage.xml
+            htmlcov/
+            junit-test-results.xml
+          retention-days: 30
+
+      - name: Display coverage summary
+        if: always()
+        run: |
+          echo "## 📊 Resumen de Cobertura de Código" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          if [ -f coverage.xml ]; then
+            echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+            poetry run coverage report >> $GITHUB_STEP_SUMMARY || echo "No se pudo generar el reporte de cobertura" >> $GITHUB_STEP_SUMMARY
+            echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "⚠️ No se encontró el archivo coverage.xml" >> $GITHUB_STEP_SUMMARY
+          fi
 
       - name: Build package
         run: poetry build
