--- a/.github/workflows/publish-testpypi.yml
+++ b/.github/workflows/publish-testpypi.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - develop
-  workflow_dispatch:  # Permite ejecución manual
+  workflow_dispatch:  # Allows manual execution
 
 permissions:
   contents: read
@@ -22,15 +22,19 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          cache: 'poetry'
 
       - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: latest
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          installer-parallel: true
+        shell: bash
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Configure Poetry
+        shell: bash
+        run: |
+          poetry config virtualenvs.create true
+          poetry config virtualenvs.in-project true
+          poetry --version
 
       - name: Load cached venv
         id: cached-poetry-dependencies
@@ -70,14 +74,14 @@ jobs:
       - name: Display coverage summary
         if: always()
         run: |
-          echo "## 📊 Resumen de Cobertura de Código" >> $GITHUB_STEP_SUMMARY
+          echo "## 📊 Code Coverage Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           if [ -f coverage.xml ]; then
             echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-            poetry run coverage report >> $GITHUB_STEP_SUMMARY || echo "No se pudo generar el reporte de cobertura" >> $GITHUB_STEP_SUMMARY
+            poetry run coverage report >> $GITHUB_STEP_SUMMARY || echo "Failed to generate coverage report" >> $GITHUB_STEP_SUMMARY
             echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           else
-            echo "⚠️ No se encontró el archivo coverage.xml" >> $GITHUB_STEP_SUMMARY
+            echo "⚠️ coverage.xml file not found" >> $GITHUB_STEP_SUMMARY
           fi
 
       - name: Build package
