--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -1,9 +1,9 @@
-name: Publish to TestPyPI
+name: Publish to PyPI
 
 on:
   push:
     branches:
-      - develop
+      - main
   workflow_dispatch:  # Allows manual execution
 
 permissions:
@@ -90,10 +90,9 @@ jobs:
       - name: Build package
         run: poetry build
 
-      - name: Publish to TestPyPI
+      - name: Publish to PyPI
         env:
-          TESTPYPI_API_TOKEN: ${{ secrets.TESTPYPI_API_TOKEN }}
+          PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         run: |
-          poetry config repositories.testpypi https://test.pypi.org/legacy/
-          poetry config pypi-token.testpypi $TESTPYPI_API_TOKEN
-          poetry publish --repository testpypi --no-interaction
+          poetry config pypi-token.pypi $PYPI_API_TOKEN
+          poetry publish --no-interaction
